<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_recorder_watchdog_buzzer</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="info@rosblox.com">ROSbloX</maintainer>
  <license>BSD3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>